[package]
name = "counterd"
version = "0.1.0"
edition = "2021"

[dependencies]
raft = "0.7.0" 
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.25"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
slog = "2.7.0"
slog-term = "2.9.1"
slog-async = "2.8.0"
tracing-test = "0.2.5"
